Prevent calls and version ids from wrapping

--- a/resources/bridge-bidding-styl-v14.css
+++ b/resources/bridge-bidding-styl-v14.css
@@ -77,6 +77,7 @@ body {
 }
 .call {
 	font-weight: bold;
+	text-wrap: nowrap;
 }
 .meaning {
 	padding-left: 3px;
@@ -89,6 +90,7 @@ body {
 }
 .version_id {
 	font-weight: bold;
+	text-wrap: nowrap;
 }
 .comment {
 	font-style: italic;
